# dl4chem-geometry

./: COD_featurize.py  COD_sdf_to_p.py  COD_test.py  COD_train.py  CSD_featurize.py  CSD_sdf_to_p.py  EXPERIMENTS.md  ICLR 2019 Poster.pages  LICENSE  MPNN.py  PredX_MPNN.py  PredX_train.py  QM9_featurize.py  QM9_sdf_to_p.py  README.md  baseline.py  baseline_nn.py  baseline_nn4.py  baseline_onethread.py  cod_baseline.sbatch  conformer_diversity.py  dataset_stats.py  dataset_stats_ideas.txt  hyperparam.sbatch  launch_hyperparam.py  qm9_baseline.sbatch  test_mask.py  test_rmsd.py  testrmsd.py  tf_rmsd.py
kc/: debug.ipynb
paper_summary/: results.ipynb  summary_utils.py
slurm_scripts/: cod_baseline_default.sbatch  cod_baseline_ignorefailures.sbatch  cod_nndg_default.sbatch  cod_nndg_ignorefailures.sbatch
summary/: molprop_summary_01202019.ipynb  pairwise_summary_01212019.ipynb  result_summary.ipynb  result_summary_COD.ipynb  result_summary_QM9.ipynb  results_summary_01202019.ipynb  results_summary_01242019.ipynb  results_summary_01272019.ipynb  results_summary_1k_samples.ipynb  summary_utils.py
tftraj/: rmsd.py  rmsd_op.py
tftraj/rmsd/: CMakeLists.txt  rmsd.cpp
